package jeu;

import moteurJeu.Commande;

import java.io.BufferedReader;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.IOException;
import java.util.ArrayList;

/**
 * Classe principale gerant la logique du jeu.
 */
public class Jeu implements moteurJeu.Jeu {
    // ########## Variables ##########
    private Labyrinthe laby;
    private Aventurier hero;
    private int[] fin;
    private int sense = 0;
    private ArrayList<Case> cases = new ArrayList<>();
    /**
     * Constantes pour se déplacer en haut
     */
    public static final String HAUT = "Haut";
    /**
     * Constantes pour se déplacer en bas
     */
    public static final String BAS = "Bas";
    /**
     * Constantes pour se déplacer à gauche
     */
    public static final String GAUCHE = "Gauche";
    /**
     * Constantes pour se déplacer à droite
     */
    public static final String DROITE = "Droite";

    /**
    * Constantes pour attaquer
    */
    public static final String SPACE = "Space";

    // ########## Getters/Setters ##########

    /**
     * Modifie le hero du jeu.
     *
     * @param hero le nouveau hero
     */
    public void setHero(Aventurier hero) {
        this.hero = hero;
    }

    /**
     * Modifie le labyrinthe du jeu.
     *
     * @param laby le nouveau labyrinthe
     */
    public void setLaby(Labyrinthe laby) {
        this.laby = laby;
    }

    /**
     * Retourne le hero du jeu.
     *
     * @return le hero du jeu
     */
    public Aventurier getHero() {
        return this.hero;
    }

    /**
     * Retourne le labyrinthe du jeu.
     *
     * @return le labyrinthe du jeu
     */
    public Labyrinthe getLaby() {
        return this.laby;
    }

    // ########## Méthodes ##########

    public Case getCase(int x, int y) {
        for (Case c : cases) {
            if (c.getCoord()[0] == x && c.getCoord()[1] == y) return c;
        }
        return null;
    }

    /**
     * Charge un jeu a partir d'un fichier texte.
     * Lit le fichier ligne par ligne pour construire le labyrinthe,
     * positionner les murs, les caisses, les depots et le personnage.
     *
     * @param nomFichier le chemin vers le fichier de labyrinthe
     * @return le jeu charge et pret a etre joue
     * @throws FileNotFoundException si le fichier n'existe pas
     * @throws IOException si une erreur de lecture survient
     * @throws FichierIncorrectException si le fichier contient des caracteres invalides, si le personnage est absent, ou si le nombre de caisses ne correspond pas au nombre de depots
     */
    public void chargerJeu(String nomFichier) throws FileNotFoundException, IOException, FichierIncorrectException {
        ArrayList<String> ligne = new ArrayList<>();
        Labyrinthe lab = convertLab(nomFichier, ligne);
        Aventurier hero = null;

        for (int i = 0; i < ligne.size(); i++) {
            String line = ligne.get(i);
            for (int j = 0; j < line.length(); j++) {
                switch (line.charAt(j)) {
                    case Labyrinthe.MUR -> lab.addMur(j, i);
                    case Labyrinthe.HERO -> hero = new Aventurier(j, i, 5);
                    case Labyrinthe.FIN -> this.fin = new int[]{j, i};
                    case Labyrinthe.VIDE -> {}
                    case Labyrinthe.PIEGE -> cases.add(new Piege(j, i));
                    case Labyrinthe.MurFriable -> cases.add(new MurFriable(j,i));
                    default -> throw new FichierIncorrectException("caractère inconnu " + line.charAt(j));
                }
            }
        }

        if (hero == null) throw new FichierIncorrectException("hero inconnu"); // Si il y as 2 personnages, ça prend le dernière
        else if (this.fin == null) throw new FichierIncorrectException("case de fin inconnue");
        this.laby = lab;
        this.hero = hero;
    }

    /**
     * Lit un fichier texte et construit un labyrinthe vide aux bonnes dimensions.
     * Les lignes du fichier sont stockees dans la liste passee en parametre
     * pour etre traitees ensuite par chargerJeu.
     * Le labyrinthe retourne a les dimensions correspondant au nombre de lignes
     * et a la largeur maximale des lignes du fichier.
     *
     * @param nomFichier le chemin vers le fichier de labyrinthe
     * @param ligne la liste dans laquelle stocker les lignes lues
     * @return un labyrinthe vide aux bonnes dimensions
     * @throws FileNotFoundException si le fichier n'existe pas
     * @throws IOException si une erreur de lecture survient
     */
    public static Labyrinthe convertLab(String nomFichier, ArrayList<String> ligne) throws FileNotFoundException, IOException {
        BufferedReader file = new BufferedReader(new FileReader(nomFichier));

        String currentLine;
        while ((currentLine = file.readLine()) != null) {
            ligne.add(currentLine);
        }
        // Fin du fichier
        int max = 0;
        for (String line : ligne) {
            if (line.length() > max) max = line.length();
        }
        Labyrinthe lab = new Labyrinthe(max, ligne.size());

        file.close();
        return lab;
    }

    /**
     * Retourne le caractere representant l'element present a la position (x, y).
     * L'ordre de priorite est : mur, hero, vide.
     *
     * @param x la colonne a verifier
     * @param y la ligne a verifier
     * @return le caractere correspondant a l'element a cette position
     */
    private char getChar(int x, int y) {
        if (this.laby.getCase(x, y)) return Labyrinthe.MUR;
        else if (this.fin[0] == x && this.fin[1] == y) return Labyrinthe.FIN;
        else if (this.hero.getX() == x && this.hero.getY() == y) return Labyrinthe.HERO;
        else if (this.getCase(x, y) != null) return Labyrinthe.PIEGE;
        return Labyrinthe.VIDE;
    }

    /**
     * Genere une representation textuelle du jeu sous forme de chaine de caracteres.
     *
     * @return la representation textuelle du jeu
     */
    public String jeuToString() {
        String res = "";
        int[] coordonnee = this.laby.returnSize();

        for (int y = 0; y < coordonnee[1]; y++) {
            for (int x = 0; x < coordonnee[0]; x++) res += this.getChar(x, y);
            res += "\n";
        }
        return res;
    }

    /**
     * Calcule la position suivante a partir d'une position (x, y) et d'une direction.
     *
     * @param x la colonne actuelle
     * @param y la ligne actuelle
     * @param commandeUser la direction du deplacement
     * @return un tableau {nouvelleColonne, nouvelleLigne} apres deplacement
     */
    public int[] getSuivant(int x, int y, Commande commandeUser) {
        if (commandeUser.haut) {
            y--;
            this.sense = 0;
        }
        if (commandeUser.bas) {
            y++;
            this.sense = 1;
        }
        if (commandeUser.gauche) {
            x--;
            this.sense = 2;
        }
        if (commandeUser.droite) {
            x++;
            this.sense = 3;
        }
        if (commandeUser.space) {
            this.hero.attaquer();
        }
        return new int[] {x, y};
    }

    /**
     * Verifie si un deplacement vers la position (x, y) est possible.
     * Lance une exception si la case est un mur ou hors limites.
     *
     * @param x la colonne de destination
     * @param y la ligne de destination
     * @param commandeUser la direction du deplacement (pour le message d'erreur)
     * @throws ActionInconnueException si la case est un mur ou hors limites
     */
    public void verifierDeplacement(int x, int y, Commande commandeUser) throws ActionInconnueException {
        try {
            if (this.laby.getCase(x, y)) throw new ActionInconnueException("Vous ne pouvez pas vous déplacer dans cette direction : " + commandeUser);
        } catch (ArrayIndexOutOfBoundsException e) {
            throw new ActionInconnueException("Vous ne pouvez pas vous déplacer dans cette direction : " + commandeUser);
        }
    }

    /**
     * Deplace le hero dans la direction indiquee.
     *
     * @param commandeUser la direction du deplacement
     */
    @Override
    public void evoluer(Commande commandeUser) {
        int[] coord = getSuivant(hero.getX(), hero.getY(), commandeUser);
        try {
            verifierDeplacement(coord[0], coord[1], commandeUser);
            switch (this.getChar(coord[0], coord[1])) {
                case Labyrinthe.PIEGE -> {
                    for (Case c : cases) {
                        if (c.getCoord()[0] == coord[0] && c.getCoord()[1] == coord[1]) {
                            c.effet(this.hero);
                            break;
                        }
                    }
                    this.hero.setPos(coord[0], coord[1]);
                }
                case Labyrinthe.VIDE -> this.hero.setPos(coord[0], coord[1]);
                case Labyrinthe.FIN -> {
                    this.hero.setPos(coord[0], coord[1]);
                }
            }
        } catch (ActionInconnueException e) {
            // Ignorer le déplacement si c'est un mur
        }
    }

    /**
     * Verifie si le jeu est fini, c'est-à-dire si le hero est sur la case de fin.
     *
     * @return true si le hero est sur la case de fin, false sinon
     */
    public boolean etreFini() {
        if (this.hero.getX() == this.fin[0] && this.hero.getY() == this.fin[1]) {
            System.out.println("Félicitation, vous avez gagné !!! \uD83C\uDFC6");
            return true;
        } else if (this.hero.etreMort()) {
            System.out.println("Vous êtes mort ! Vous avez perdu ! \uD83D\uDC80");
            return true;
        } else {
            return false;
        }
    }

    // ==================== Compatibilités Testes ====================
    /**
     * Deplace le hero dans la direction indiquee.
     *
     * @param action la direction du deplacement
     * @throws ActionInconnueException si le deplacement est impossible
     */
    public void evoluer(String action) throws ActionInconnueException {
        Commande commandeUser = new Commande();
        switch (action) {
            case HAUT -> commandeUser.haut = true;
            case BAS -> commandeUser.bas = true;
            case GAUCHE -> commandeUser.gauche = true;
            case DROITE -> commandeUser.droite = true;
            default -> throw new ActionInconnueException("L'action " + action + " n'est pas reconnue.");
        }
        evoluer(commandeUser);
    }

    /**
     * Verifie si un deplacement vers la position (x, y) est possible.
     * Lance une exception si la case est un mur ou hors limites.
     *
     * @param x la colonne de destination
     * @param y la ligne de destination
     * @param action la direction du deplacement (pour le message d'erreur)
     * @throws ActionInconnueException si la case est un mur ou hors limites
     */
    public void verifierDeplacement(int x, int y, String action) throws ActionInconnueException {
        try {
            if (this.laby.getCase(x, y)) throw new ActionInconnueException("Vous ne pouvez pas vous déplacer dans cette direction : " + action);
        } catch (ArrayIndexOutOfBoundsException e) {
            throw new ActionInconnueException("Vous ne pouvez pas vous déplacer dans cette direction : " + action);
        }
    }
}