@startuml
title Diagramme Classes avec fonctionnalités (version 1)

class Jeu {
    -laby : Labyrinthe
    -hero : Aventurier
    -fin : int[]
    +{static} HAUT = "Haut" : String
    +{static} BAS = "Bas" : String
    +{static} GAUCHE = "Gauche" : String
    +{static} DROITE = "Droite" : String

    +setHero(perso : Personnage) : void

    +chargerJeu(nomFichier : String) : void
    +convertLab(nomFichier : String, ligne : ArrayList<String>) : Labyrinthe
    +deplacerHero(action : String) : void
    +setLaby(laby : Labyrinthe) : void
}

class Labyrinthe {
    +MUR = '#' : static final char
    +HERO = '@' : static final char
    +FIN = '&' : static final char
    +VIDE = ' ' : static final char

    +Labyrinthe(x : int, y : int)
    +getCases(int x, int y) : int[][]
    +addMur(x : int, y : int) : void
    +estTraversable(x : int, y : int) : boolean
}
interface Personnage {
    +getX() : int
    +getY() : int

    +setPos(x : int, y : int) : void
}

class Aventurier {
    -x : int
    -y : int

    +Aventurier(x : int, y : int) : void
    +getX() : int
    +getY() : int

    +setPos(x : int, y : int) : void

}
class FichierIncorrectException {
    +FichierIncorrectException(message : String) : void
}

Jeu --> Labyrinthe
Jeu --> Aventurier
Personnage <|.. Aventurier
Jeu ..> FichierIncorrectException
@enduml
